--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Susan · Frontend Dev | 個人品牌網站</title>
-  <meta name="description" content="Susan 的個人作品集網站">
+  <meta name="description" content="Susan 的個人作品集網站，喜歡把複雜流程轉成清楚好用的介面，從實務經驗出發，一點一滴學習前端，打造貼近使用者的產品。">
 
   <style>
     /* =========================================
